// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/Panel renders with all props 1`] = `
.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-0 {
  position: relative;
}

<div
  className="emotion-1"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className="emotion-0"
  >
    <header
      className="hig__notifications-flyout__panel__title"
    >
      hello
    </header>
    <section
      className="hig__notifications-flyout__panel__container"
      style={
        Object {
          "maxHeight": "",
        }
      }
    >
      <div
        onScroll={[Function]}
        role="list"
      >
        foobar
      </div>
    </section>
    <footer
      className="hig__notifications-flyout__panel__loading hig__notifications-flyout__panel__loading--open"
    >
      <div
        data-props="{
  \\"size\\": \\"s\\"
}"
      />
    </footer>
  </div>
</div>
`;

exports[`notifications-flyout/Panel renders without props 1`] = `
.emotion-1 {
  background-color: #ffffff;
  border-radius: 4px;
  border: 1px solid transparent;
  box-shadow: 0 0 16px rgba(0,0,0,0.25);
}

.emotion-0 {
  position: relative;
}

<div
  className="emotion-1"
  style={
    Object {
      "maxHeight": undefined,
    }
  }
>
  <div
    className="emotion-0"
  >
    <header
      className="hig__notifications-flyout__panel__title"
    >
      Notifications
    </header>
    <section
      className="hig__notifications-flyout__panel__container"
      style={
        Object {
          "maxHeight": "",
        }
      }
    >
      <div
        onScroll={undefined}
        role="list"
      />
    </section>
    <footer
      className="hig__notifications-flyout__panel__loading"
    >
      <div
        data-props="{
  \\"size\\": \\"s\\"
}"
      />
    </footer>
  </div>
</div>
`;
